# andyamat

./: .gitignore  CLAUDE.md  CMakeLists.txt  config.json  deploy.sh  index.html  main.cc  setup-vps.sh
controllers/: AuthController.cc  AuthController.h  FighterController.cc  FighterController.h  InviteController.cc  InviteController.h
filters/: AdminFilter.cc  AdminFilter.h
frontend/: package-lock.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: index.html  styles.scss
frontend/src/app/: api.service.ts  app.routes.ts  auth.guard.ts  auth.service.ts
frontend/src/app/admin/: admin.component.html  admin.component.scss  admin.component.ts
frontend/src/app/fighter/: battle-arena.component.html  battle-arena.component.scss  battle-arena.component.ts  fighter-landing.component.html  fighter-landing.component.scss  fighter-landing.component.ts  fighter-profile.component.html  fighter-profile.component.scss  fighter-profile.component.ts  leaderboard.component.html  leaderboard.component.scss  leaderboard.component.ts
frontend/src/app/fighter/audio/: battle-audio.ts
frontend/src/app/fighter/canvas/: characters.ts
frontend/src/app/fighter/models/: fighter.models.ts
frontend/src/app/game/: game.component.html  game.component.scss  game.component.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/shared/: base-game.engine.ts
frontend/src/app/toy-game/: toy-game.component.html  toy-game.component.scss  toy-game.component.ts
frontend/src/app/toy-game/drawing/: buzz.ts  (+9 more)
sql/: schema.sql
(+1 files in other folders)
